# grutil

./: README.md  pyproject.toml
.github/workflows/: ci.yml
grutil/: afm.py  amka.py  dates.py  money.py  numbers.py  text.py
src/grutil/: texts.py
tests/: test_afm.py  test_amka.py  test_dates.py  test_datetimes.py  test_money.py  test_numbers.py  test_text.py  test_texts.py  test_validators.py
