[project]
name = "grutil"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ted Lazaros", email = "tedlaz@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
